--- a/Templates/exam/index.html.j2
+++ b/Templates/exam/index.html.j2
@@ -42,7 +42,7 @@
 
     <div style="margin-top: 15px;">
       <p style="margin: 0; font-size: 14px; text-align: justify;">
-        Please read and follow all instructions carefully. Use the back of the sheet if necessary. The <i>answer</i> is 42.
+        Please read and follow all instructions carefully. Use the back of the sheet if necessary. Mars has $g=3.72 \frac{\mathrm{m}}{\mathrm{s}^{2}}$.
       </p>
     </div>
   </div>
