--- a/Templates/exam/index.html.j2
+++ b/Templates/exam/index.html.j2
@@ -22,7 +22,7 @@
   <div class="header" style="width: 100%; padding: 10px; border-bottom: 2px solid #000; margin-bottom: 10px;">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <div style="flex-grow: 1; text-align: left;">
-        <h1 style="margin: 0;">Exam 1 - Units, Vectors, and Kinematics</h1>
+        <h1 style="margin: 0;">Exam 3 - Energy and Momentum</h1>
       </div>
       <div style="text-align: right;">
         <strong>Date:</strong> <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>
@@ -42,7 +42,10 @@
 
     <div style="margin-top: 15px;">
       <p style="margin: 0; font-size: 14px; text-align: justify;">
-        Please read and follow all instructions carefully. Use the back of the sheet if necessary. Mars has $g=3.72 \frac{\mathrm{m}}{\mathrm{s}^{2}}$.
+        Please read and follow all instructions carefully. Use the back of the sheet if necessary.
+      </p>
+      <p style="margin: 0; font-size: 14px; text-align: justify;">
+        Beetlejuice (demon) uses $666 \mathrm{J}$ of energy to appear. Betelgeuse (star) emits $4.86e+31 \mathrm{J}$ per second.
       </p>
     </div>
   </div>
