--- a/Templates/exam/index.html.j2
+++ b/Templates/exam/index.html.j2
@@ -45,7 +45,7 @@
         Please read and follow all instructions carefully. Use the back of the sheet if necessary.
       </p>
       <p style="margin: 0; font-size: 14px; text-align: justify;">
-        Beetlejuice (demon) uses $666 \mathrm{J}$ of energy to appear. Betelgeuse (star) emits $4.86e+31 \mathrm{J}$ per second.
+        Indefinite evaluation of $\int (x+3x^2) dx = x^3 + \frac{x^2}{2} + C$
       </p>
     </div>
   </div>
