--- a/Templates/exam/index.html.j2
+++ b/Templates/exam/index.html.j2
@@ -22,7 +22,7 @@
   <div class="header" style="width: 100%; padding: 10px; border-bottom: 2px solid #000; margin-bottom: 10px;">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <div style="flex-grow: 1; text-align: left;">
-        <h1 style="margin: 0;">Exam 3 - Energy and Momentum</h1>
+        <h1 style="margin: 0;">Exam 4 - Rotational Dynamics</h1>
       </div>
       <div style="text-align: right;">
         <strong>Date:</strong> <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>
@@ -45,7 +45,7 @@
         Please read and follow all instructions carefully. Use the back of the sheet if necessary.
       </p>
       <p style="margin: 0; font-size: 14px; text-align: justify;">
-        Indefinite evaluation of $\int (x+3x^2) dx = x^3 + \frac{x^2}{2} + C$
+        Indefinite evaluation of $\int (x+3x^2) dx = x^3 + \frac{x^2}{2} + C
       </p>
     </div>
   </div>
