--- a/Templates/exam/index.html.j2
+++ b/Templates/exam/index.html.j2
@@ -22,7 +22,7 @@
   <div class="header" style="width: 100%; padding: 10px; border-bottom: 2px solid #000; margin-bottom: 10px;">
     <div style="display: flex; justify-content: space-between; align-items: center;">
       <div style="flex-grow: 1; text-align: left;">
-        <h1 style="margin: 0;">Exam 4 - Rotational Dynamics</h1>
+        <h1 style="margin: 0;">Exam 5 - Equilibrium and Fluids</h1>
       </div>
       <div style="text-align: right;">
         <strong>Date:</strong> <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>
