--- a/Templates/exam/index.html.j2
+++ b/Templates/exam/index.html.j2
@@ -45,7 +45,7 @@
         Please read and follow all instructions carefully. Use the back of the sheet if necessary.
       </p>
       <p style="margin: 0; font-size: 14px; text-align: justify;">
-        Indefinite evaluation of $\int (x+3x^2) dx = x^3 + \frac{x^2}{2} + C
+        Definitions: (incompressible: not able to be compressed, incomprehensible: not able to be understood; not intelligible.)
       </p>
     </div>
   </div>
